--- a/ernesto.vcxproj
+++ b/ernesto.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ernesto.cpp" />
+    <ClCompile Include="mem\ram.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="headers\mem\ram.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
