feat: ppu groundwork, very basic test tile display

--- a/ernesto.vcxproj
+++ b/ernesto.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="cpu\cpu.cpp" />
     <ClCompile Include="ernesto.cpp" />
+    <ClCompile Include="gfx\ppu.cpp" />
     <ClCompile Include="mem\ram.cpp" />
     <ClCompile Include="rom\rom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\cpu\cpu.h" />
+    <ClInclude Include="headers\gfx\ppu.h" />
     <ClInclude Include="headers\mem\ram.h" />
     <ClInclude Include="headers\rom\rom.h" />
   </ItemGroup>
